--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,16 @@
   }
 }
 
+#mobile-nav-button {
+  display: none;
+}
+
+@media (max-width: 734px) {
+  #mobile-nav-button {
+    display: block;
+  }
+}
+
 /* Hero Section */
 
 .hero-section {
