--- a/styles/utility.css
+++ b/styles/utility.css
@@ -10,7 +10,7 @@ html {
 .container {
   max-width: 980px;
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 clamp(1.5rem, 5%, 2.25rem);
 }
 
 img {
