--- a/styles/style.css
+++ b/styles/style.css
@@ -187,9 +187,9 @@ picture.sensors img {
 
 .cta .typography-headline {
   font-weight: bold;
-  font-size: clamp(3.25rem, 5vw, 5rem);
-  margin: 0 auto;
-  line-height: 1;
+  font-size: clamp(3rem, 5vw, 5rem);
+  word-wrap: break-word;
+  line-height: 1.1;
   margin: 1.5rem 0 2.5rem 0;
 }
 
