--- a/styles/utility.css
+++ b/styles/utility.css
@@ -10,12 +10,13 @@ html {
 .container {
   max-width: 980px;
   margin: 0 auto;
-  padding: 0 clamp(1.5rem, 5%, 2.25rem);
+  padding-left: clamp(1.5rem, 5%, 2.25rem);
+  padding-right: clamp(1.5rem, 5%, 2.25rem);
 }
 
 @media only screen and (min-width: 735px) and (max-width: 1068px) {
   .container {
-    padding: 0 ;
+    padding: 0;
     max-width: 692px;
   }
 }
@@ -31,6 +32,10 @@ ul li {
 a {
   text-decoration: none;
   color: #000;
+}
+
+main#main {
+  padding-top: 3.75rem;
 }
 
 /* Text Color */
