--- a/styles/utility.css
+++ b/styles/utility.css
@@ -2,6 +2,7 @@
   font-family: "Inter", sans-serif;
   box-sizing: border-box;
   touch-action: manipulation;
+  outline: none !important;
 }
 
 html {
